Hero section completed

--- a/index.html
+++ b/index.html
@@ -20,6 +20,24 @@
                 <li><button>Sign In</button></li>
             </ul>
         </nav>
+        <section class="hero">
+            <div class="hero-text">
+                <h1>Are You Covered? Home, Life, & Auto Insurance.</h1>
+                <p>Proin eget tortor risus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Donec rutrum congue leo eget malesuada. </p>
+                <div class="btn">
+                    <button id="get-started">GET STARTED</button>
+                    <button id="watch-video">WATCHED THE VIDEO</button>
+                </div>
+                <figure class="small-images">
+                    <img src="./images/hero-inline1.png" alt="">
+                    <img src="./images/hero-inline2.png" alt="">
+                    <img src="./images/hero-inline3.png" alt="">
+                </figure>
+            </div>
+            <div class="hero-img">
+                <img src="./images/hero-image2.png" alt="Hero Image">
+            </div>
+        </section>
     </header>
 </body>
 </html>
