Header section mobile layout fixed and policies section completed

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#">Insurance Services</a></li>
                 <li><button>Sign In</button></li>
             </ul>
+            <box-icon name='menu' color="whitesmoke" size="lg" id="menu"></box-icon>
         </nav>
         <section class="hero">
             <div class="hero-text">
@@ -26,18 +27,48 @@
                 <p>Proin eget tortor risus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Donec rutrum congue leo eget malesuada. </p>
                 <div class="btn">
                     <button id="get-started">GET STARTED</button>
-                    <button id="watch-video">WATCHED THE VIDEO</button>
+                    <button id="watch-video">WATCH THE VIDEO</button>
                 </div>
                 <figure class="small-images">
-                    <img src="./images/hero-inline1.png" alt="">
                     <img src="./images/hero-inline2.png" alt="">
+                    <img src="./images/hero-inline1.png" alt="">
                     <img src="./images/hero-inline3.png" alt="">
                 </figure>
             </div>
             <div class="hero-img">
-                <img src="./images/hero-image2.png" alt="Hero Image">
+                <img src="./images/hero-image.png" alt="Hero Image">
+                <img src="./icons/earth.svg" alt="" class="hero-icons" id="earth">
+                <img src="./icons/lock.svg" alt="" class="hero-icons" id="lock">
+                <img src="./icons/star.svg" alt="" class="hero-icons" id="star">
+                <img src="./images/qualified.png" alt="" id="qualified">
+                <img src="./images/small-text.png" alt="" id="small-text">
             </div>
         </section>
     </header>
+    <main>
+        <section class = "policies">
+            <h2>Individual & Umbrella Policies</h2>
+            <hr>
+            <section class="row">
+                <section class="policy">
+                    <img src="./images/life-insurance.png" alt="">
+                    <h3>Life Insurance</h3>
+                    <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis</p>
+                </section>
+                <section class="policy">
+                    <img src="./images/home-insurance.png" alt="">
+                    <h3>Home Insurance</h3>
+                    <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis</p>
+                </section>
+                <section class="policy">
+                    <img src="./images/auto-insurance.png" alt="">
+                    <h3>Auto Insurance</h3>
+                    <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis</p>
+                </section>
+            </section>
+        </section>
+    </main>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
