Fixed policies section mobile layout

--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
                     <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis</p>
                 </section>
             </section>
+            <button id="all-policies">Browse all policies</button>
         </section>
     </main>
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-    <script src="./app.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js" defer></script>
+    <script src="./app.js" defer></script>
 </body>
 </html>
