about section-1 completed

--- a/index.html
+++ b/index.html
@@ -68,6 +68,34 @@
             </section>
             <button id="all-policies">Browse all policies</button>
         </section>
+
+        <!--About Section-->
+        <section class="about">
+            <section class="about-left">
+                <h2>Experienced Agents You Can Trust</h2>
+                <hr>
+                <p>Proin eget tortor risus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Donec rutrum congue leo eget malesuada. Nulla porttitor accumsan tincidunt. Donec rutrum congue leo eget malesuada.</p>
+            </section>
+            <section class="about-right">
+                <div class="one">
+                    <h2>18</h2>
+                    <p>POLICIES</p>
+                </div>
+                <div class="two">
+                    <h2>9</h2>
+                    <p>AGENTS</p>
+                </div>
+                <div class="three">
+                    <h2>10</h2>
+                    <p>YEARS IN BUISNESS</p>
+                </div>
+                <div class="four">
+                    <h2 style="font-size: 2.4rem; color: #093624;">Free Consultation</h2>
+                    <p style="color: #595959; line-height: 2.5rem">Proin eget tortor risus. Praesent sapien massa, convallis.</p>
+                    <button style="padding: 1.4rem 2rem; font-weight: 500; font-size: 1.2rem;">chat now</button>
+                </div>
+            </section>
+        </section>
     </main>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js" defer></script>
     <script src="./app.js" defer></script>
