about section-2 completed

--- a/index.html
+++ b/index.html
@@ -96,6 +96,16 @@
                 </div>
             </section>
         </section>
+        <section class="about">
+            <section class="about-left">
+                <img src="./images/about2.png" alt="">
+            </section>
+            <section class="about-left">
+                <h2>Experienced Agents You Can Trust</h2>
+                <hr>
+                <p>Proin eget tortor risus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Donec rutrum congue leo eget malesuada. Nulla porttitor accumsan tincidunt. Donec rutrum congue leo eget malesuada.</p>
+            </section>
+        </section>
     </main>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js" defer></script>
     <script src="./app.js" defer></script>
