contact us section completed

--- a/index.html
+++ b/index.html
@@ -106,7 +106,65 @@
                 <p>Proin eget tortor risus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Donec rutrum congue leo eget malesuada. Nulla porttitor accumsan tincidunt. Donec rutrum congue leo eget malesuada.</p>
             </section>
         </section>
+
+        <!--Review Section-->
+        <section class="review-section">
+            <h2>Our Customers</h2>
+            <hr>
+            <section class="reviews">
+                <section class="review">
+                    <p>“Curabitur aliquet quam id dui posuere blandit. Nulla quis lorem ut libero malesuada feugiat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Curabitur aliquet quam id dui posuere.”</p>
+                </section>
+                <section class="review">
+                    <p>“Curabitur aliquet quam id dui posuere blandit. Nulla quis lorem ut libero malesuada feugiat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Curabitur aliquet quam id dui posuere.”</p>
+                </section>
+                <section class="review">
+                    <p>“Curabitur aliquet quam id dui posuere blandit. Nulla quis lorem ut libero malesuada feugiat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Curabitur aliquet quam id dui posuere.”</p>
+                </section>
+            </section>
+        </section>
     </main>
+    <footer class="two-column">
+        <section class="contact two-column-cols">
+            <section class="description">
+                <h2 style="color: #FFFFFF">Contact Us</h2>
+                <hr>
+                <p>Proin eget tortor risus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Donec rutrum congue leo eget malesuada. Nulla porttitor accumsan tincidunt. Donec rutrum congue leo eget malesuada.</p>
+            </section>
+            <section class="contact-content">
+                <section class="icon">
+                    <img src="./icons/email.svg" alt="">
+                </section>
+                <section class="information">
+                    <h4>Email</h4>
+                    <p>inte_ger@yahoo.com</p>
+                </section>
+                <section class="icon">
+                    <img src="./icons/mobile.svg" alt="">
+                </section>
+                <section class="information">
+                    <h4>Phone</h4>
+                    <p>+62 1404 5123 12312</p>
+                </section>
+                <section class="icon">
+                    <img src="./icons/location.svg" alt="">
+                </section>
+                <section class="information">
+                    <h4>Address</h4>
+                    <p>Jl. Jend. Sudirman No.Kav 48A, RT.5/RW.4, Karet Semanggi, </p>
+                </section>
+            </section>
+        </section>
+        <section class="contact-form two-column-cols">
+            <form>
+                <input type="text" placeholder="Name">
+                <input type="email" placeholder="Email Address">
+                <input type="tel" placeholder="Mobile Number">
+                <textarea cols="30" rows="10" placeholder="Message"></textarea>
+                <button type="submit">Submit</button>
+            </form>
+        </section>
+    </footer>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js" defer></script>
     <script src="./app.js" defer></script>
 </body>
