--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 left: 7%;">
                 <img src="./icons/star.svg" alt="" class="hero-icons" id="star" style="top: 30%;
                 right: 12%;">
-                <img src="./images/qualified.png" alt="" id="qualified" style="position: absolute; top: 55%; left: 12%;">
+                <img src="./images/qualified.png" alt="" id="qualified">
                 <img src="./images/small-text.png" alt="" id="small-text" style="position: absolute; top: 60%; right: 6%;">
             </div>
         </section>
