--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./media-query.css" media="(max-width: 768px)">
+    <link rel="stylesheet" href="./media-query.css" media="(max-width: 1000px)">
     <!--Google fonts-->
     <link rel="DNS-prefetch" href="//fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Insurance Services</a></li>
-                <li><button style="text-transform: none; padding: 8px 17px;">Sign In</button></li>
+                <li><button style="text-transform: none; padding: 8px 36px;">Sign In</button></li>
             </ul>
             <box-icon name='menu' color="whitesmoke" size="lg" id="menu"></box-icon>
         </nav>
@@ -78,7 +78,7 @@
 
         <!--About Section-->
         <section class="about">
-            <section class="about-left">
+            <section class="about-left about-text">
                 <h2>Experienced Agents You Can Trust</h2>
                 <hr>
                 <p>Proin eget tortor risus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Donec rutrum congue leo eget malesuada. Nulla porttitor accumsan tincidunt. Donec rutrum congue leo eget malesuada.</p>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="three">
                     <h2>10</h2>
-                    <p>YEARS IN BUISNESS</p>
+                    <p>YEARS IN BUSINESS</p>
                 </div>
                 <div class="four">
                     <h2 style="font-size: 2.4rem; color: #093624;">Free Consultation</h2>
@@ -107,8 +107,8 @@
             <section class="about-left">
                 <img src="./images/about2.webp" alt="about image" loading="lazy">
             </section>
-            <section class="about-left">
-                <h2>Experienced Agents You Can Trust</h2>
+            <section class="about-left about-text">
+                <h2>We got you covered. Don't get off guard</h2>
                 <hr>
                 <p>Proin eget tortor risus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Donec rutrum congue leo eget malesuada. Nulla porttitor accumsan tincidunt. Donec rutrum congue leo eget malesuada.</p>
             </section>
@@ -136,7 +136,7 @@
             <section class="description">
                 <h2 style="color: #FFFFFF">Contact Us</h2>
                 <hr>
-                <p>Proin eget tortor risus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Donec rutrum congue leo eget malesuada. Nulla porttitor accumsan tincidunt. Donec rutrum congue leo eget malesuada.</p>
+                <p style="padding-top: 3.2rem;">Proin eget tortor risus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Donec rutrum congue leo eget malesuada. Nulla porttitor accumsan tincidunt. Donec rutrum congue leo eget malesuada.</p>
             </section>
             <section class="contact-content">
                 <section class="icon">
@@ -164,10 +164,14 @@
         </section>
         <section class="contact-form two-column-cols">
             <form>
-                <input type="text" placeholder="Name">
-                <input type="email" placeholder="Email Address">
-                <input type="tel" placeholder="Mobile Number">
-                <textarea cols="30" rows="10" placeholder="Message"></textarea>
+                <input type="text" onfocus="this.placeholder = ''"
+                placeholder = 'Name' onblur="this.placeholder = 'Name'">
+                <input type="email" onfocus="this.placeholder = ''"
+                placeholder = 'Email Address' onblur="this.placeholder = 'Email Address'">
+                <input type="tel" onfocus="this.placeholder = ''"
+                placeholder = 'Mobile Number' onblur="this.placeholder = 'Mobile Number'">
+                <textarea cols="30" rows="10" onfocus="this.placeholder = ''"
+                placeholder = 'Message' onblur="this.placeholder = 'Message'"></textarea>
                 <button type="submit">Submit</button>
             </form>
         </section>
